--- a/core/composer.json
+++ b/core/composer.json
@@ -48,7 +48,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Http/Helpers/helpers.php"
+            "app/Http/Helpers/helpers.php",
+            "app/Http/Helpers/LocationHelper.php"
         ]
     },
     "autoload-dev": {
