--- a/core/composer.json
+++ b/core/composer.json
@@ -28,6 +28,7 @@
         "phpmailer/phpmailer": "^6.9",
         "razorpay/razorpay": "^2.9",
         "sendgrid/sendgrid": "^8.1",
+        "spatie/laravel-permission": "^6.20",
         "stripe/stripe-php": "^13.13",
         "twilio/sdk": "^7.16",
         "vonage/client": "^4.0"
